# oregon_school_scrape_11102022

./: .#README.md  README.md  pyproject.toml  scratch.txt
oregon_deptedu_11102022/: main.py  pypdf_trial.py  scrap.py
