[tool.poetry]
name = "oregon-deptedu-11102022"
version = "0.1.0"
description = ""
authors = ["yvan <yvanscher@gmail.com>"]
readme = "README.md"
packages = [{include = "oregon_deptedu_11102022"}]

[tool.poetry.dependencies]
python = "^3.10"
textract = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
